<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/form"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/form"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        />
    <TextView
        android:id="@+id/cpr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/form"
        android:text="@string/cpr"
        android:textSize="20sp"
        android:layout_marginTop="10dp"
        />

    <EditText
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/enter_your_cpr"
        android:layout_below="@id/form"
        android:layout_marginStart="160dp"
         />

    <TextView
        android:id="@+id/firstN"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/first_name"
        android:textSize="20sp"
        android:layout_below="@id/cpr"
        android:layout_marginTop="20dp"

        />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_below="@id/editText"
        android:hint="@string/enter_your_first_name"
        android:layout_marginLeft="160dp"
        tools:ignore="RtlHardcoded" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastN"
        android:text="@string/last_name"
        android:textSize="20sp"
        android:layout_below="@id/firstN"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/lastName"
        android:ems="10"
        android:inputType="textPersonName"
        android:layout_marginLeft="160dp"
        android:layout_below="@id/editText2"
        android:hint="@string/enter_your_last_name"
        />
    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:textSize="20sp"
        android:layout_below="@id/lastN"
        android:layout_marginTop="20dp"
        />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/emails"
        android:text="@string/email"
        android:textSize="20sp"
        android:layout_below="@id/gender"
        android:layout_marginTop="20dp"
        />
    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/enter_your_email"
        android:layout_below="@id/radioGroup1"
        android:layout_marginLeft="160dp"
        tools:ignore="RtlHardcoded"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/diplom"
        android:text="@string/diplomas"
        android:textSize="20sp"
        android:layout_below="@id/emails"
        android:layout_marginTop="50dp"
        />


    <Button
        android:onClick="submitButton"
        android:id="@+id/submitBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/diplom"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="30dp"
        android:text="@string/submit"/>

    <Button
        android:onClick="clearButton"
        android:id="@+id/clearBut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/diplom"
        android:layout_marginTop="90dp"
        android:layout_marginLeft="190dp"
        android:text="@string/clear"/>
<RadioGroup
    android:id="@+id/radioGroup1"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_below="@id/lastName"
    android:layout_marginLeft="160dp">
    <RadioButton
        android:id="@+id/radioButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/male"/>
    <RadioButton
        android:id="@+id/radioButton3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/female" />
</RadioGroup>

    <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText3"
        android:layout_marginLeft="160dp">

        <RadioButton
            android:id="@+id/radioButton7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/none"
            />
        <RadioButton
            android:id="@+id/radioButton4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/bachelor"
            />
        <RadioButton
            android:id="@+id/radioButton5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/master"
            />
        <RadioButton
            android:id="@+id/radioButton6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phd"
            />

    </RadioGroup>



</RelativeLayout>

